# bill-organizer

./: .env.example  .gitignore  .project-meta.json  CMakeLists.txt  README.md
.cache/clangd/index/: card_database.cpp.48CEF7F4ADED1DA0.idx  card_database.h.AA0331F6967E13F4.idx  card_encryption.cpp.6AE199F4DC9B5C31.idx  card_encryption.h.8992A824BC6B281D.idx  card_form_dialog.cpp.C6E0769CAF63B18F.idx  card_form_dialog.h.2688DD120E3C3260.idx  card_list_view.cpp.3DCF0BE029489C94.idx  card_list_view.h.765F802E3034276F.idx  main.cpp.C9CF0E6639490BF0.idx  main_window.cpp.401E2368F7AA014B.idx  main_window.h.559C3C04CA1C8994.idx  payment_card.cpp.3D83C214036E975A.idx  payment_card.h.D84E496C40F9C513.idx  payment_card_list_model.cpp.C533CB6BA66A82F6.idx  payment_card_list_model.h.B3DBDF642F729396.idx  payment_card_manager.cpp.B3F48DBC922A583A.idx  payment_card_manager.h.AC0F4C3F28235FEA.idx  test_helpers.h.E47C8058B7D4CB8F.idx  tst_card_encryption.cpp.C8F9F569E340FCF5.idx  tst_card_manager_integration.cpp.5724ADCCC5DC5EE2.idx  tst_card_workflows.cpp.6ACB808C5299CA98.idx  tst_payment_card.cpp.B28E31F45D3D942C.idx  tst_payment_card_manager_validation.cpp.7089E74BAA330018.idx
logs/coding/: 20260313-120000-PLAN-001-payment-card-management.md
logs/pm/: 20260313-114114-PLAN-001-payment-card-management.md  20260313-144116-PLAN-001-payment-card-management.md
logs/project-planner/: 20260313-004510-bill-organizer.md
logs/qa/: 20260313-144939-PLAN-001-payment-card-management.md
logs/stack-initializer/: 20260313-002419-init.md
planning/specs/screens/: PLAN-001-payment-card-management.html  PLAN-001-payment-card-management.md
planning/specs/state/: PLAN-001-payment-card-management.md
planning/specs/storage/: PLAN-001-payment-card-management.md
planning/specs/test-cases/: PLAN-001-e2e.md  PLAN-001-integration.md  PLAN-001-unit.md
planning/tickets/: PLAN-001-payment-card-management.md  PLAN-002-subscription-entry-management.md  PLAN-003-currency-exchange-rate-system.md  PLAN-004-dashboard-analytics.md  PLAN-005-alerts-notifications.md  PLAN-006-invoice-receipt-storage.md  PLAN-007-ocr-parsing-integration.md  PLAN-008-data-import-export.md
src/: main.cpp
src/models/: payment_card.cpp  payment_card.h  payment_card_list_model.cpp  payment_card_list_model.h  payment_card_manager.cpp  payment_card_manager.h
src/utils/: card_database.cpp  card_database.h  card_encryption.cpp  card_encryption.h
src/views/: card_form_dialog.cpp  card_form_dialog.h  card_list_view.cpp  card_list_view.h  main_window.cpp  main_window.h
tests/: CMakeLists.txt  README.md  test_helpers.h
tests/integration/: tst_card_manager_integration.cpp
tests/ui/: tst_card_workflows.cpp
tests/unit/: tst_card_encryption.cpp  tst_payment_card.cpp  tst_payment_card_manager_validation.cpp
